Bug 1681098 - Update the aspect ratio when a PiP video gets resized r=mconley

Differential Revision: https://phabricator.services.mozilla.com/D100150